--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /portfolio/
     
   - title: "Outreach"
-    url: /outreach/
+    url: /example/
         
   - title: "Blog Posts"
     url: /year-archive/
